--- a/frontend/src/components/Main.css
+++ b/frontend/src/components/Main.css
@@ -153,7 +153,7 @@
   left: 5px;
 }
 
-/* Label text */
+
 .popular {
   position: absolute;
   top: 10px;
@@ -325,7 +325,7 @@
 }
 
 .red{
-  color: red;
+  color: white;
   padding: 8px;
   margin: 9px;
   margin-top: 7px;
