--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -35,7 +35,9 @@
   border: none;
   padding: 6px 14px;
   border-radius: 4px;
-  border-width:0
+  border-width:0;
+  height:50px;
+  width:120px;
 }
 
 .custom-btn:hover {
